--- a/about.html
+++ b/about.html
@@ -79,11 +79,10 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="/index.html" target="_self">Home</a>
-				<a href="/about.html" target="_self">About</a>
-				<a href="/services.html" target="_self">Services</a>
-				<a href="/contact.html" target="_self">Contact</a>
-
+				<a href="index.html" target="_self">Home</a>
+				<a href="about.html" target="_self">About</a>
+				<a href="services.html" target="_self">Services</a>
+				<a href="contact.html" target="_self">Contact</a>
 			</div>
 		</div>
 
