--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
 
 				<div class="col-lg-3 col-md-4 col-xs-6">
 					<div class="client-logo">
-						<img src="images/partners/gemas.jpg" class="img-fluid" alt="">
+						<img src="images/partners/gemas.jpg" class="img-fluid" alt="" style="  max-width: 100%; /* Make sure images don't overflow their containers */
+						height: auto; /* Maintain image aspect ratio */">
 					</div>
 				</div>
 
