--- a/Filter Pumps.html
+++ b/Filter Pumps.html
@@ -42,6 +42,8 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
@@ -78,7 +80,7 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="index.html" target="_self">Home</a>
+				<a href="index.html" target="_self" id="toplink">Home</a>
 				<a href="about.html" target="_self">About</a>
 				<a href="services.html" target="_self">Services</a>
 				<a href="contact.html" target="_self">Contact</a>
