--- a/about.html
+++ b/about.html
@@ -34,6 +34,8 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
 	
@@ -67,7 +69,7 @@
 			<input type="checkbox" id="nav-check">
 			<div class="nav-header">
 				<div class="nav-title">
-					<img src="images/nav 2.png" alt="">
+					<img src="images/final logo new.png" alt="">
 				</div>
 			</div>
 			<div class="nav-btn">
@@ -79,10 +81,11 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="index.html" target="_self">Home</a>
+				<a href="index.html" target="_self" id="toplink">Home</a>
 				<a href="about.html" target="_self">About</a>
 				<a href="services.html" target="_self">Services</a>
 				<a href="contact.html" target="_self">Contact</a>
+
 			</div>
 		</div>
 
@@ -131,12 +134,13 @@
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person1.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
-						<h3>Person 1</h3>
-						<strong class="role">CEO</strong>
+						<h3>Mr. Khalid Mohammed Al-Dosari
+						</h3>
+						<strong class="role">Chairman</strong>
 						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, consequuntur? Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="tel://97455027474"><i class="icon-phone"></i></a></li>
+							<li><a href="+97455027474"><i class="icon-twitter"></i></a></li>
 						
 						</ul>
 					</div>
