--- a/cleaning equip.html
+++ b/cleaning equip.html
@@ -78,7 +78,7 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="index.html" target="_self">Home</a>
+				<a href="index.html" target="_self" id="toplink">Home</a>
 				<a href="about.html" target="_self">About</a>
 				<a href="services.html" target="_self">Services</a>
 				<a href="contact.html" target="_self">Contact</a>
