--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,8 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
 	
@@ -81,7 +83,7 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="index.html" target="_self">Home</a>
+				<a href="index.html" target="_self" id="toplink">Home</a>
 				<a href="about.html" target="_self">About</a>
 				<a href="services.html" target="_self">Services</a>
 				<a href="contact.html" target="_self">Contact</a>
@@ -89,7 +91,7 @@
 			</div>
 		</div>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img5.jpg); background-position: center;">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(https://images.pexels.com/photos/261388/pexels-photo-261388.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1); background-position: center;">
 		<div class="coverlay"></div>
 		<div class="container">
 			<div class="row">
@@ -97,7 +99,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Contact Us</h1>
-							<h2><a href="http://freehtml5.co" target="_blank"></a></h2>
+							<h2>Get in touch effortlessly with our dedicated team</h2>
 						</div>
 					</div>
 				</div>
