--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<meta name="keywords" content="Swimming Pools" />
 	<meta name="author" content="Crystal Pools" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap" rel="stylesheet">
 	<!-- 
 	//////////////////////////////////////////////////////
 
@@ -31,6 +33,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
 		rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
 	<meta property="og:title" content="" />
 	<meta property="og:image" content="" />
 	<meta property="og:url" content="" />
@@ -76,7 +81,7 @@
 			<input type="checkbox" id="nav-check">
 			<div class="nav-header">
 				<div class="nav-title">
-					<img src="images/nav 2.png" alt="">
+					<img src="images/final logo new.png" alt="">
 				</div>
 			</div>
 			<div class="nav-btn">
@@ -88,7 +93,7 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="index.html" target="_self">Home</a>
+				<a href="index.html" target="_self" id="toplink">Home</a>
 				<a href="about.html" target="_self">About</a>
 				<a href="services.html" target="_self">Services</a>
 				<a href="contact.html" target="_self">Contact</a>
@@ -98,68 +103,42 @@
 
 
 
-		<!-- <nav class="fh5co-nav" role="navigation">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html"><img src="images/nav 2.png" alt=""></a></div>
-					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li class="has-dropdown">
-								<a href="services.html">Services</a>
-
-							</li>
-
-
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-
-			</div>
-		</nav> -->
-
-		<!-- <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img1.webp);">
 		
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 col-md-offset-1 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Dive In, Make a Splash</h1>
-							<h2>"Your Oasis of Refreshment and Relaxation Awaits at Crystal Pools. <br> Immerse Yourself in Pure Enjoyment </h2> -->
-		<!--	<p><a href="#" class="btn btn-default">View Our Work</a></p> 
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>   -->
 
 
 
 		<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="images/covers/c1.jpg" alt="First slide"
+					<img class="d-block w-100" src="images/new covers/1.jpg" alt="First slide"
 						style="object-position:center;">
 
 					<div class="coverlay"> </div>
 
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="images/covers/c4.jpg" alt="Second slide"
+					<img class="d-block w-100" src="images/new covers/2.jpg" alt="Second slide"
+						style="object-position:center center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/3.jpg" alt="Third slide"
+						style="object-position:center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/4.jpg" alt="Second slide"
 						style="object-position:center center;">
 					<div class="coverlay"> </div>
 
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="images/covers/c3.jpg" alt="Third slide"
-						style="object-position:center;">
+					<img class="d-block w-100" src="images/new covers/5.jpg" alt="Second slide"
+						style="object-position:center center;">
 					<div class="coverlay"> </div>
 
 				</div>
@@ -167,16 +146,18 @@
 
 			<div class="overlay-text">
 				<h3 style=" color:#fff;
-				font-family: 'Oswald', sans-serif;
+				font-family: 'Didact Gothic', sans-serif;
 				position:absolute;
-				z-index:12;
-				font-size: 8vh;
+				z-index:1;
+				font-size: 400%;
 				top:50%;
 				left:0;
 				width:100%;
-				text-align:center; ">Aquatic Bliss</h3>
+				text-align:center; ">Dive In, <span style="font-family: 'Didact Gothic', sans-serif; font-weight: bold;">Make a Splash</span></h3>
 
 			</div>
+			
+
 
 
 
@@ -248,8 +229,8 @@
 					</div>
 				</div>
 				<div class="col-forth fh5co-video fh5co-bg" style="background-image: url(images/img7.jpg)">
-					<a href="https://www.pexels.com/video/food-presentation-in-a-box-by-the-poolside-2732785/"
-						class="popup-vimeo"><i class="icon-video2"></i></a>
+					<a href="https://www.youtube.com/embed/LP75vzEHWKM?si=9d999lEPTUMoAxPs"
+						><i class="icon-video2"></i></a>
 					<div class="overlay"></div>
 				</div>
 			</div>
@@ -272,7 +253,7 @@
 							<div class="col-md-7 col-sm-7 col-md-pull-2 col-sm-pull-2 animate-box"
 								data-animate-effect="fadeInRight">
 								<div class="feature-image">
-									<img src="images/img3.jpg" alt="work">
+									<img src="https://images.pexels.com/photos/261327/pexels-photo-261327.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="work">
 								</div>
 							</div>
 							<div class="col-md-5 col-sm-5">
@@ -370,7 +351,7 @@
 			<div class="row">
 				<div class="project">
 					<div class="col-md-8 col-md-push-5 animate-box" data-animate-effect="fadeInLeft">
-						<img class="img-responsive" src="images/img5.jpg" alt="work">
+						<img class="img-responsive" src="https://images.pexels.com/photos/261105/pexels-photo-261105.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="work">
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
@@ -392,7 +373,7 @@
 				</div>
 				<div class="project">
 					<div class="col-md-8 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
-						<img class="img-responsive" src="images/img4.jpg" alt="work">
+						<img class="img-responsive" src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="work">
 					</div>
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
@@ -432,7 +413,7 @@
 							"Exceeded all expectations! From design to completion, their attention to detail was
 							impeccable. Our dream pool became a reality"
 						</blockquote>
-						<p class="author"><cite>John Doe</cite></p>
+						<p class="author"><cite>Joseph John</cite></p>
 					</div>
 				</div>
 				<div class="col-md-4 animate-box">
@@ -441,7 +422,7 @@
 							"Professional, reliable, and a pleasure to work with. Their dedication to customer
 							satisfaction is unmatched. Highly recommended!"
 						</blockquote>
-						<p class="author"><cite>Rob Smith</cite></p>
+						<p class="author"><cite>Thomas Zacharia</cite></p>
 					</div>
 				</div>
 				<div class="col-md-4 animate-box">
@@ -450,7 +431,7 @@
 							"Absolutely thrilled with the end result. Their team's expertise and commitment to quality
 							shine through in every aspect of our new pool."
 						</blockquote>
-						<p class="author"><cite>Jane Doe</cite></p>
+						<p class="author"><cite>Christopher Manoj</cite></p>
 					</div>
 				</div>
 			</div>
@@ -627,10 +608,12 @@
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
 			var myCarousel = new bootstrap.Carousel(document.getElementById('carouselExampleSlidesOnly'), {
-				interval: 2500 // Adjust the interval in milliseconds
+				interval: 2000 // Adjust the interval in milliseconds
 			});
 		});
 	</script>
+
+	
 
 </body>
 
