--- a/pumps.html
+++ b/pumps.html
@@ -55,6 +55,8 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 	</head>
 	<body>
@@ -78,7 +80,7 @@
 			</div>
 
 			<div class="nav-links">
-				<a href="index.html" target="_self">Home</a>
+				<a href="index.html" target="_self" id="toplink">Home</a>
 				<a href="about.html" target="_self">About</a>
 				<a href="services.html" target="_self">Services</a>
 				<a href="contact.html" target="_self">Contact</a>
@@ -87,7 +89,7 @@
 		</div>
 
 	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/pumps/pumpbg_upscaled.jpg);">
-		<div class="overlay"></div>
+		<div class="coverlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -122,10 +124,7 @@
 				</div>
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/pumps/cp\ 2.webp);">
-						<div class="desc">
-							<h3><a href="#">KP series</a></h3>
-							
-						</div>
+						
 					</div>
 				</div>
 				   <div class="col-md-4 col-sm-4 text-center animate-box">
