--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.cdnfonts.com/css/futura-pt" rel="stylesheet">
 	<!-- 
 	//////////////////////////////////////////////////////
 
@@ -116,13 +117,7 @@
 					<div class="coverlay"> </div>
 
 				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="images/new covers/2.jpg" alt="Second slide"
-						style="object-position:center center;">
-					<div class="coverlay"> </div>
-
-				</div>
-
+				
 				<div class="carousel-item">
 					<img class="d-block w-100" src="images/new covers/3.jpg" alt="Third slide"
 						style="object-position:center;">
@@ -130,18 +125,16 @@
 
 				</div>
 
-				<div class="carousel-item">
-					<img class="d-block w-100" src="images/new covers/4.jpg" alt="Second slide"
-						style="object-position:center center;">
-					<div class="coverlay"> </div>
-
-				</div>
+			
 				<div class="carousel-item">
 					<img class="d-block w-100" src="images/new covers/5.jpg" alt="Second slide"
 						style="object-position:center center;">
 					<div class="coverlay"> </div>
 
 				</div>
+
+
+				
 			</div>
 
 			<div class="overlay-text">
@@ -149,11 +142,12 @@
 				font-family: 'Didact Gothic', sans-serif;
 				position:absolute;
 				z-index:1;
-				font-size: 400%;
+				@import url('https://fonts.cdnfonts.com/css/futura-pt');
+				font-size: 500%;
 				top:50%;
 				left:0;
 				width:100%;
-				text-align:center; ">Dive In, <span style="font-family: 'Didact Gothic', sans-serif; font-weight: bold;">Make a Splash</span></h3>
+				text-align:center; ">DIVE IN, <span style="font-family: 'Futura PT', sans-serif; font-weight: bold;">MAKE A SPLASH</span></h3>
 
 			</div>
 			
