--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 	<meta name="twitter:card" content="" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
+	<link href="https://fonts.cdnfonts.com/css/futura-pt" rel="stylesheet">
 	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
 	
 	<!-- Animate.css -->
@@ -96,7 +96,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Who We Are</h1>
+							<h1 style=" @import url('https://fonts.cdnfonts.com/css/futura-pt'); font-family: 'Futura PT', sans-serif;">Who We Are</h1>
 							<h2>Crafting Your Oasis, One Pool at a Time. <br> Welcome to Our World <a href="" target="_blank"></a></h2>
 						</div>
 					</div>
