--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="images/new covers/1.jpg" alt="First slide"
+					<img class="d-block w-100" src="images/new covers/11.jpg" alt="First slide"
 						style="object-position:center;">
 
 					<div class="coverlay"> </div>
@@ -119,7 +119,7 @@
 				</div>
 				
 				<div class="carousel-item">
-					<img class="d-block w-100" src="images/new covers/3.jpg" alt="Third slide"
+					<img class="d-block w-100" src="images/new covers/6.jpg" alt="Third slide"
 						style="object-position:center;">
 					<div class="coverlay"> </div>
 
@@ -127,7 +127,60 @@
 
 			
 				<div class="carousel-item">
-					<img class="d-block w-100" src="images/new covers/5.jpg" alt="Second slide"
+					<img class="d-block w-100" src="images/new covers/12.jpg" alt="Second slide"
+						style="object-position:center center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/13.jpg" alt="Third slide"
+						style="object-position:center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+			
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/14.jpg" alt="Second slide"
+						style="object-position:center center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/15.jpg" alt="Third slide"
+						style="object-position:center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+			
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/16.jpg" alt="Second slide"
+						style="object-position:center center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/17.jpg" alt="Third slide"
+						style="object-position:center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+			
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/18.jpg" alt="Second slide"
+						style="object-position:center center;">
+					<div class="coverlay"> </div>
+
+				</div>
+
+				<div class="carousel-item">
+					<img class="d-block w-100" src="images/new covers/19.jpg" alt="Second slide"
 						style="object-position:center center;">
 					<div class="coverlay"> </div>
 
@@ -139,7 +192,7 @@
 
 			<div class="overlay-text">
 				<h3 style=" color:#fff;
-				font-family: 'Didact Gothic', sans-serif;
+				font-family: 'Futura PT', sans-serif;
 				position:absolute;
 				z-index:1;
 				@import url('https://fonts.cdnfonts.com/css/futura-pt');
