--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Contact Us</h1>
-							<h2>Get in touch effortlessly with our dedicated team</h2>
+							<h1 style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Contact Us</h1>
+							<h2 style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Get in touch effortlessly with our dedicated team</h2>
 						</div>
 					</div>
 				</div>
