--- a/services.html
+++ b/services.html
@@ -98,8 +98,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Services</h1>
-							<h2>Building Dreams, Crafting Pools, Creating Joy. <a href="http://freehtml5.co" target="_blank"></a></h2>
+							<h1 style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Services</h1>
+							<h2 style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Building Dreams, Crafting Pools, Creating Joy. <a href="http://freehtml5.co" target="_blank"></a></h2>
 						</div>
 					</div>
 				</div>
