--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 				top:50%;
 				left:0;
 				width:100%;
+				text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 				text-align:center; ">DIVE IN, <span style="font-family: 'Futura PT', sans-serif; font-weight: bold;">MAKE A SPLASH</span></h3>
 
 			</div>
